spec/lib/fs/folder_core/errors/messages/pathError.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns path error message for title and path',
        i: ['title', 'path'],
        e: {
          title: "Module 'title' folder missing",
          messages: ["Directory 'path' does not exist."]
        }
      }
    ]);
  };

}).call(this);
